[package]
name = "toml_edit_test"
version = "0.1.0"
authors = ["Darren Schroeder <343840+fdncred@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.2.0"
indexmap = {version = "1.5.1", features = ["serde-1"]}
ansi_term = {version = "0.12.1", features = ["derive_serde_style"]}
# serde = "1.0"
# serde_json = "1.0"